// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TimeRange No Range Given 1`] = `
<TimeRange
  onChange={[Function]}
>
  <div
    className="makeStyles-root-7"
  >
    <div
      className="MuiButtonGroup-root"
      role="group"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton-9"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root makeStyles-calendarIcon-10"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
        </span>
        <NoSsr>
          <span
            className="MuiTouchRipple-root"
          >
            <TransitionGroup
              childFactory={[Function]}
              component={null}
              exit={true}
            />
          </span>
        </NoSsr>
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-selectButton-11"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          All
        </span>
        <NoSsr>
          <span
            className="MuiTouchRipple-root"
          >
            <TransitionGroup
              childFactory={[Function]}
              component={null}
              exit={true}
            />
          </span>
        </NoSsr>
      </button>
    </div>
    <Portal>
      <div
        className="MuiPopover-root"
        id="time-range"
        onKeyDown={[Function]}
        role="presentation"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "fixed",
            "right": 0,
            "top": 0,
            "visibility": "hidden",
            "zIndex": 1300,
          }
        }
      >
        <TrapFocus>
          <div
            data-test="sentinelStart"
            tabIndex={0}
          />
          <Transition>
            <div
              className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
              style={
                Object {
                  "opacity": 0,
                  "transform": "scale(0.75, 0.5625)",
                  "visibility": "hidden",
                }
              }
              tabIndex="-1"
            >
              <ul
                className="MuiList-root MuiMenu-list MuiList-padding"
                onKeyDown={[Function]}
                role="menu"
                tabIndex={-1}
              >
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(all)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  All
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(now-1d/d)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  In 1 Day
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(now-1w/d)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  In 1 Week
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(now-1m/d)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  In 1 Month
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
                <li
                  aria-disabled={false}
                  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                  data-ga="MenuItem(custom)"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  role="menuitem"
                  tabIndex={-1}
                >
                  Custom
                  <NoSsr>
                    <span
                      className="MuiTouchRipple-root"
                    >
                      <TransitionGroup
                        childFactory={[Function]}
                        component={null}
                        exit={true}
                      />
                    </span>
                  </NoSsr>
                </li>
              </ul>
            </div>
          </Transition>
          <div
            data-test="sentinelEnd"
            tabIndex={0}
          />
        </TrapFocus>
      </div>
    </Portal>
  </div>
</TimeRange>
`;

exports[`Storyshots TimeRange Set Range From Props 1`] = `
<div>
  <p>
    range = null:
  </p>
  <TimeRange
    onChange={[Function]}
    range={null}
  >
    <div
      className="makeStyles-root-140"
    >
      <div
        className="MuiButtonGroup-root"
        role="group"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton-142"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-calendarIcon-143"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-selectButton-144"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            All
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
      </div>
      <Portal>
        <div
          className="MuiPopover-root"
          id="time-range"
          onKeyDown={[Function]}
          role="presentation"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": 1300,
            }
          }
        >
          <TrapFocus>
            <div
              data-test="sentinelStart"
              tabIndex={0}
            />
            <Transition>
              <div
                className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style={
                  Object {
                    "opacity": 0,
                    "transform": "scale(0.75, 0.5625)",
                    "visibility": "hidden",
                  }
                }
                tabIndex="-1"
              >
                <ul
                  className="MuiList-root MuiMenu-list MuiList-padding"
                  onKeyDown={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(all)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={0}
                  >
                    All
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1d/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Day
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1w/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Week
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1m/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Month
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(custom)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    Custom
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                </ul>
              </div>
            </Transition>
            <div
              data-test="sentinelEnd"
              tabIndex={0}
            />
          </TrapFocus>
        </div>
      </Portal>
    </div>
  </TimeRange>
  <p>
    range = Object with GTE equal to option values:
  </p>
  <TimeRange
    onChange={[Function]}
    range={
      Object {
        "GTE": "now-1d/d",
      }
    }
  >
    <div
      className="makeStyles-root-140"
    >
      <div
        className="MuiButtonGroup-root"
        role="group"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton-142"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-calendarIcon-143"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-selectButton-144"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            In 1 Day
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
      </div>
      <Portal>
        <div
          className="MuiPopover-root"
          id="time-range"
          onKeyDown={[Function]}
          role="presentation"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": 1300,
            }
          }
        >
          <TrapFocus>
            <div
              data-test="sentinelStart"
              tabIndex={0}
            />
            <Transition>
              <div
                className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style={
                  Object {
                    "opacity": 0,
                    "transform": "scale(0.75, 0.5625)",
                    "visibility": "hidden",
                  }
                }
                tabIndex="-1"
              >
                <ul
                  className="MuiList-root MuiMenu-list MuiList-padding"
                  onKeyDown={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(all)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={0}
                  >
                    All
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1d/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Day
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1w/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Week
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1m/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Month
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(custom)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    Custom
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                </ul>
              </div>
            </Transition>
            <div
              data-test="sentinelEnd"
              tabIndex={0}
            />
          </TrapFocus>
        </div>
      </Portal>
    </div>
  </TimeRange>
  <p>
    range = Object with \`GTE\` and \`LTE\`:
  </p>
  <TimeRange
    onChange={[Function]}
    range={
      Object {
        "GTE": "1989-06-04",
        "LTE": "2019-06-04",
      }
    }
  >
    <div
      className="makeStyles-root-140"
    >
      <div
        className="MuiButtonGroup-root"
        role="group"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-calendarButton-142"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root makeStyles-calendarIcon-143"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
              />
            </svg>
          </span>
          <NoSsr>
            <span
              className="MuiTouchRipple-root"
            >
              <TransitionGroup
                childFactory={[Function]}
                component={null}
                exit={true}
              />
            </span>
          </NoSsr>
        </button>
        <input
          className="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-startDate-145"
          color="default"
          disableFocusRipple={false}
          disableRipple={false}
          disabled={false}
          fullWidth={false}
          key=".1"
          onChange={[Function]}
          size="medium"
          type="date"
          value="1989-06-04"
          variant="outlined"
        >
          <input
            className="MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined makeStyles-startDate-145"
            onChange={[Function]}
            type="date"
            value="1989-06-04"
          />
        </input>
      </div>
      <span
        className="makeStyles-to-146"
      >
        to
      </span>
      <input
        className="makeStyles-endDate-147"
        onChange={[Function]}
        type="date"
        value="2019-06-04"
      />
      <Portal>
        <div
          className="MuiPopover-root"
          id="time-range"
          onKeyDown={[Function]}
          role="presentation"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "fixed",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": 1300,
            }
          }
        >
          <TrapFocus>
            <div
              data-test="sentinelStart"
              tabIndex={0}
            />
            <Transition>
              <div
                className="MuiPaper-root MuiMenu-paper MuiPopover-paper MuiPaper-elevation8 MuiPaper-rounded"
                style={
                  Object {
                    "opacity": 0,
                    "transform": "scale(0.75, 0.5625)",
                    "visibility": "hidden",
                  }
                }
                tabIndex="-1"
              >
                <ul
                  className="MuiList-root MuiMenu-list MuiList-padding"
                  onKeyDown={[Function]}
                  role="menu"
                  tabIndex={-1}
                >
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(all)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={0}
                  >
                    All
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1d/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Day
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1w/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Week
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(now-1m/d)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    In 1 Month
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                  <li
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
                    data-ga="MenuItem(custom)"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    role="menuitem"
                    tabIndex={-1}
                  >
                    Custom
                    <NoSsr>
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </NoSsr>
                  </li>
                </ul>
              </div>
            </Transition>
            <div
              data-test="sentinelEnd"
              tabIndex={0}
            />
          </TrapFocus>
        </div>
      </Portal>
    </div>
  </TimeRange>
</div>
`;
